# ai-gateway-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/port/: ai_provider.rs  mod.rs
crates/application/src/usecase/: chat_completion.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/model/: completion.rs  mod.rs  provider.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: config.rs  lib.rs
crates/infrastructure/src/provider/: google_ai_studio.rs  groq.rs  mod.rs  openrouter.rs  vertex.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: error.rs  lib.rs  openapi.rs  router.rs  state.rs
crates/presentation/src/handler/: chat.rs  health.rs  mod.rs  providers.rs
crates/presentation/src/middleware/: api_key.rs
docs/: ci-cd.md
