[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/presentation",
    "apps/server",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# 内部crate
domain = { path = "crates/domain" }
application = { path = "crates/application" }
infrastructure = { path = "crates/infrastructure" }
presentation = { path = "crates/presentation" }

# Web / 非同期
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# HTTPクライアント（プロバイダ呼び出し用）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# エラー
thiserror = "2"
anyhow = "1"

# 設定 / ログ
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 非同期trait（async fn in trait はstableだがdyn Trait互換のため使う場面あり）
async-trait = "0.1"
