[package]
name = "server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure.workspace = true
presentation.workspace = true

anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
